welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:24: error: not found: value faireavanceV
  faireavanceV()
  ^