welcome.lessons.welcome.methods.picture.PictureMono1.scala.code

def faireV(){
 
  avance(2)
  baisseBrosse()
  leveBrosse()
  avance()
  gauche()
  avance()
  baisseBrosse()
	leveBrosse()
  recule()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  avance(2)
  gauche()
  	
 
}

for( v<- 0 to 3){
  faireavanceV()
}
